src/objects/Fraud_Alert__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Known_Fraud__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <formula>Known_Fraud__r.Business_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Known_Fraud__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Known_Fraud__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>Known_Fraud__r.Fax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Known_Fraud__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Known_Fraud__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Known Fraud</label>
        <referenceTo>Known_Fraud__c</referenceTo>
        <relationshipLabel>Fraud Alerts</relationshipLabel>
        <relationshipName>R00N70000002HLfREAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Known_Fraud__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Address__c</fullName>
        <formula>Lead__r.Street</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Business_Name__c</fullName>
        <formula>Lead__r.Company</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Business Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_City__c</fullName>
        <formula>Lead__r.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Email__c</fullName>
        <formula>Lead__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Fax__c</fullName>
        <formula>Lead__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_First_Name__c</fullName>
        <formula>Lead__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Last_Name__c</fullName>
        <formula>Lead__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Phone__c</fullName>
        <formula>Lead__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Social_Security_Number__c</fullName>
        <formula>Lead__r.Social_Security_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Social Security Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_State__c</fullName>
        <formula>Lead__r.State</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ZIP__c</fullName>
        <formula>Lead__r.PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead ZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Fraud Alerts</relationshipLabel>
        <relationshipName>R00N70000002HLfeEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Known_Fraud__r.Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <formula>Known_Fraud__r.Social_Security_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social Security Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Known_Fraud__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Potential Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <formula>Known_Fraud__r.ZIP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZIP</label>
        <type>Text</type>
    </fields>
    <label>Fraud Alert</label>
    <nameField>
        <displayFormat>FA-{0000}</displayFormat>
        <label>Fraud Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fraud Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>